--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-ul {
+ul.nav {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -6,11 +6,12 @@ ul {
     background-color: #333;
 }
 
-li {
+li.nav {
     float: left;
+    font-family: sans-serif;
 }
 
-li a {
+li.nav a {
     display: block;
     color: white;
     text-align: center;
@@ -26,12 +27,30 @@ li a:hover {
 body {
   background-image: url(bg.png);
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat:  no-repeat;
   background-size: cover;
+
+  height: 96%;
+  width: 96%;
+  margin: 2%;
+}
+
+html {
+  height: 100%;
+  width: 100%;
+  margin: 0;
 }
 
 .whitediv {
   background-color: rgba(255,255,255,0.5);
+  font-family: sans-serif;
+
+  height:80%;
+  min-height:80%;
+}
+
+.innerdiv {
+  margin: 2%;
 }
 
 .active {
